aau/sf_autobackup/objects/Bus_Route__c.object
<CustomObject>
    <description>A Bus Route, Collection of Stops</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Route_Color__c</fullName>
        <description>The color of the route</description>
        <label>Route Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Marker__c</fullName>
        <description>The file name of the image marker for this route.</description>
        <inlineHelpText>The file name of the image marker for this route.</inlineHelpText>
        <label>Route Marker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teletrac_Name__c</fullName>
        <description>The unabbreviated name of the Bus Route as returned by Teletrac.</description>
        <inlineHelpText>The unabbreviated name of the Bus Route as returned by Teletrac.</inlineHelpText>
        <label>Teletrac Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bus Route</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Teletrac_Name__c</columns>
        <columns>Route_Color__c</columns>
        <columns>Route_Marker__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Bus Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>